# ultralytics-license-plate-extraction

./: .gitignore  main.py  pyproject.toml
