[project]
name = "licence-plate-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0.0",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ultralytics>=8.3.204",
]
